--- a/assets/style.css
+++ b/assets/style.css
@@ -35,27 +35,28 @@ margin: 0;
         }
         .btnStyle {
             padding: 1%;
-            width: 20%;
+            width: 30%;
             margin: 0px auto;
             text-decoration: underline;
             color: black;
-            background-color: aquamarine;
+            background-color: rgb(0, 255, 170);
             border-style: solid black;
         }
-        .begin-button:hover{
-            transition: 1s;
-            background-color: rgb(255, 0, 51);
-            color: white;
-        }
+
+        .btnStyle:hover{
+    transition: 1s;
+    background-color: rgb(255, 0, 51);
+    color: white;
+}
 
 .questionContainer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgb(31, 31, 31);
     margin: 10% 20%;
     padding: 10px 10px;
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 50px;
 }
 
