--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,8 @@ margin: 0;
     display: wrap;
     justify-content: center;
     align-items: center;
+    border-style: solid;
+    border-color: 20px white;
 }
     .begin h1 {
         display: flex;
@@ -42,32 +44,37 @@ margin: 0;
             background-color: rgb(0, 255, 170);
             border-style: solid black;
         }
-
-        .btnStyle:hover{
-    transition: 1s;
+.btnStyle:hover{
+    transition: 2s;
     background-color: rgb(255, 0, 51);
-    color: white;
+    color: rgb(1, 1, 1);
 }
 
 .questionContainer{
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: rgb(31, 31, 31);
+    align-items: center; */
+    background-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-color: red;
     margin: 10% 20%;
     padding: 10px 10px;
     color: rgb(255, 255, 255);
-    border-radius: 50px;
+    border-radius: 30px;
 }
 
-.questionTitle {
+.questionTitles {
+    display: contents;
+    justify-content: center;
+    align-items: center;
+}
+
+.qBtn {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-    button {
-        transition: 2s;
-        color: rgb(255, 0, 0);
-        background-color:rgb(255, 255, 255);
-    }
+.qBtn:hover {
+    color: black;
+}
