--- a/assets/style.css
+++ b/assets/style.css
@@ -78,3 +78,49 @@ margin: 0;
 .qBtn:hover {
     color: black;
 }
+
+
+@media screen and (max-width: 521px) {
+        .begin {
+            background-color: black;
+            color: rgb(255, 255, 255);
+            padding: 10px;
+            width: 60%;
+            margin: 100px auto;
+            border-radius: 50px;
+            display: wrap;
+            justify-content: center;
+            align-items: center;
+            border-style: solid;
+            border-color: 20px white;
+        }
+            .begin h1 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 20px;
+                font-weight: bolder;
+                font-style: oblique;    
+            }
+        
+            .begin p {
+                font-size: 13px;
+                display: flex;
+                justify-content: center;
+            }
+                .begin button{
+                    display: flex;
+                    justify-content: center;
+                }
+                .btnStyle {
+                    font-size: 15px;
+                    padding: 1%;
+                    width: 30%;
+                    margin: 0px auto;
+                    text-decoration: underline;
+                    color: black;
+                    background-color: rgb(0, 255, 170);
+                    border-style: solid black;
+                }   
+            
+    };
