--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ margin: 0;
 }
 
 .begin {
-    background-color: black;
+    background-color: rgb(244, 164, 164);
     color: rgb(255, 255, 255);
     padding: 20px;
     width: 60%;
@@ -54,13 +54,15 @@ margin: 0;
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(240, 149, 149);
     border-style: solid;
-    border-color: red;
-    margin: 10% 20%;
+    border-color: rgb(255, 255, 255);
+    margin: 5% 20%;
     padding: 10px 10px;
     color: rgb(255, 255, 255);
     border-radius: 30px;
+    width: 100vh;
+    height: 80vh;
 }
 
 .questionTitles {
@@ -71,7 +73,8 @@ margin: 0;
 
 .qBtn {
     display: flex;
-    justify-content: center;
+    
+    justify-content: flex;
     align-items: center;
 }
 
